# BookTracker

./: .gitignore  CMakeLists.txt
src/: Book.cpp  Book.hpp  CMakeLists.txt  Date.cpp  Date.hpp  Journal.hpp  Property.hpp  Property.inl  Serialization.cpp  Serialization.hpp  Serialization.inl  main.cpp
